# agent-sim

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  EVOLUTION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agentsim/: __init__.py  analysis.py  simulation.py  viz.py
agentsim/agents/: __init__.py  base.py  deliberative.py  learning.py  reactive.py
agentsim/environment/: __init__.py  base.py  grid.py
agentsim/scenarios/: __init__.py  foraging.py  pursuit.py
examples/: example_foraging.py  example_learning_agent.py  example_pursuit.py
tests/: conftest.py  test_agents.py  test_analysis.py  test_coverage_extra.py  test_environment.py  test_error_hardening.py  test_performance.py  test_property_based.py  test_scenarios.py  test_security.py  test_simulation.py
