[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsim"
version = "0.1.0"
description = "Multi-agent simulation environment with scenarios, analysis, and visualization"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["agentsim"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
